# adam-abundance

./: .env.example  .env.prod.example  .gitattributes  .gitignore  AGENT.md  CLAUDE-agent.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  manifest.json  next.config.ts  package.json  postcss.config.mjs  pyproject.toml  tailwind.config.ts
.github/workflows/: ci.yml
deploy/: bootstrap.sh  switchboard-scheduler.service  switchboard-web.service
docs/: DEPLOY.md  INTEGRATION-NOTES.md  agent-integration-endpoints.md  prd.md  trend-pipeline.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_app_user.py  0003_trend_pipeline.py  0004_trend_lifecycle.py  0005_writer_emulation.py  0006_expenditure.py  0007_trend_score_weights.py  0008_writer_stats_cost.py  0009_writer_personas.py  0010_brand_topic_demand.py  0011_app_setting.py  0012_notification_read.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/data/: route.ts
src/app/api/health/: route.ts
src/components/: StatCard.tsx
src/lib/: bp.ts  data.ts  supabase.ts
src/switchboard/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  context.py  costs.py  credentials.py  devseed.py  interfaces.py  logging_.py  notifications.py  persona_studio.py  plagiarism.py  pricing.py  rbac.py  session_trends.py  style.py  users.py  writers.py
src/switchboard/adapters/: __init__.py  _http.py  actions.py  analytics.py  base.py  dummy.py  images.py  opportunity.py  paid_media.py  production.py  registry.py  research.py  trend_sources.py
src/switchboard/adapters/clients/: __init__.py  ahrefs.py  bigquery.py  firecrawl.py  google_auth.py  hcviral.py  llm.py  newsapi.py  perplexity.py  semrush.py  sentinel.py  sheets.py  similarweb.py  tavily.py  x_api.py  youtube.py
src/switchboard/agents/: __init__.py  analytics.py  base.py  opportunity.py  paid_media.py  production.py  reporting.py  research.py
src/switchboard/api/: __init__.py  app.py  auth.py  json_api.py  routes.py
src/switchboard/api/static/brand-logos/: carbuzz.avif  hotcars.avif  topspeed.avif
src/switchboard/api/templates/: activity.html  agent_detail.html  agents.html  base.html  dispatch_result.html  distribution.html  expenditure.html  governor.html  login.html  memory.html  memory_entry.html  notifications.html  observability.html  overview.html  pipeline_detail.html  pipelines.html  plan_detail.html  plans.html  session_trends.html  systems.html  trend_detail.html  trends.html  users.html  writer_emulation.html
src/switchboard/db/: __init__.py  base.py  enums.py  models.py
src/switchboard/feeders/: __init__.py  content_audit.py  decay.py  trend_scan.py
src/switchboard/governor/: __init__.py  caps_config.py  governor.py
src/switchboard/memory/: __init__.py  store.py
src/switchboard/orchestrator/: __init__.py  cycle.py  dispatch.py  flag_text.py  planner.py  plans.py  slack.py
src/switchboard/scheduler/: __init__.py  scheduler.py
src/switchboard/trends/: __init__.py  detector.py  dossier.py  generators.py  lifecycle.py  monitor.py  personas.py  pipeline.py  repo.py  scoring.py  scout.py  sessions.py  weights.py
tests/: conftest.py  test_adapters_domain.py  test_adapters_framework.py  test_adapters_io.py  test_agents.py  test_api_html.py  test_api_json.py  test_api_json_actions.py  test_api_notification.py  test_api_notification_read.py  test_api_spend_caps.py  test_artifacts.py  test_cli.py  test_clients_heavy.py  test_clients_http.py  test_config.py  test_context.py  test_costs.py  test_credentials.py  test_dossier.py  test_feeders.py  test_flag_text.py  test_generators.py  test_governor.py  test_notifications.py  test_orchestrator_glue.py  test_persona_studio.py  test_personas.py  test_pipeline_engine.py  test_plagiarism.py  test_pricing.py  test_pricing_db.py  test_rbac.py  test_redaction.py  test_repo.py  test_scheduler.py  test_scoring.py  test_scout.py  test_session_trends.py  test_sessions.py  (+9 more)
tests/integration/: conftest.py  test_pipeline.py  test_pipeline_cost.py  test_style_profile.py
