[project]
name = "switchboard"
version = "0.1.0"
description = "Switchboard — orchestration + shared-memory layer over the Valnet Auto portfolio's existing systems"
requires-python = ">=3.11"
readme = "README.md"

# Dependencies are grouped by the plane they serve. Bias (per PRD §11) is to
# extend what already exists and add the minimum. Heavy per-adapter SDKs
# (google-ads, facebook-business, bingads, playwright, etc.) are optional
# extras so the core (memory + governor + orchestrator) installs light and the
# app boots even when a given integration's SDK is absent.
dependencies = [
    # Core web + orchestration plane
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",  # FastAPI Form()/UploadFile deps, e.g. POST /cycle
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "tenacity>=8.3",            # retries/backoff on adapters (Phase 6)

    # Shared memory (Postgres) + migrations
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "greenlet>=3.0",

    # Scheduling (morning cycle + feeders)
    "apscheduler>=3.10",

    # LLM substrate
    "anthropic>=0.34",

    # Auth (Google OAuth / OIDC — PRD §9.1)
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
# --- data / warehouse (Analytics, Opportunity, Paid-Media, feeders) ---
data = [
    "google-cloud-bigquery>=3.25",
    "google-auth>=2.30",
    "google-api-python-client>=2.130",   # Sheets + Gmail
    "gspread>=6.1",
]
# --- paid-media ad platforms (Paid-Media, read-only) ---
ads = [
    "google-ads>=25.0",
    "facebook-business>=20.0",
    "bingads>=13.0",
    "boto3>=1.34",                       # Lotlinx/Carzing/QuoteWizard S3 CSVs
]
# --- browser automation (Emaki push, social render, scraping) ---
browser = [
    "playwright>=1.44",
]
# --- research / feeds ---
research = [
    "feedparser>=6.0",
    "trafilatura>=1.9",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
switchboard = "switchboard.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Coverage flags live in CI (--cov-fail-under) so a local run without a DB
# (integration tests skip) never fails on the floor. `pytest --cov` still works.

[tool.coverage.run]
source = ["switchboard"]
branch = true
omit = [
    "*/__main__.py",
    "*/devseed.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]
